--- a/etc/views/threadlist/threadlist.html
+++ b/etc/views/threadlist/threadlist.html
@@ -4,5 +4,10 @@
 </head>
 
 <body>
-
+  <% if(_v("threadlist")) {
+    threadlist = _v("threadlist");
+    for(var i = 0; i < threadlist.length; ++i) {
+      partial("threadlist/thread.html", {thread: threadlist[i].doc});
+    }
+  } %>
 </body>
