a lot of work on threadlist controller

--- a/etc/views/threadlist/threadlist.html
+++ b/etc/views/threadlist/threadlist.html
@@ -7,7 +7,7 @@
   <% if(_v("threadlist")) {
     threadlist = _v("threadlist");
     for(var i = 0; i < threadlist.length; ++i) {
-      partial("threadlist/thread.html", {thread: threadlist[i].doc});
+      partial("threadlist/thread.html", {thread: threadlist[i]});
     }
   } %>
 </body>
